k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-deploy
spec:
  selector:
    matchLabels:
      app: static-deploy
  template:
    metadata:
      labels:
        app: static-deploy
    spec:
      containers:
      - name: static-deploy
        image: 151439720941.dkr.ecr.ap-northeast-1.amazonaws.com/docker:NUMBER
        
        ports:
        - containerPort: 80
