k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: static-svc
  namespace : static-website
spec:
  selector:
    app: static-deploy
  ports:
  - port: 80
    targetPort: 80
