k8s/ingress.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: static-ingress
 namespace: static-website
spec:
 rules:
 - host:  kubernetes.lekkalahyma.xyz
   http:
     paths:
     - path:
       backend:
         serviceName: static-svc
         servicePort: 80
